--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'launcher.Main'
+mainClassName = 'view.Main'
 
 // tag::repositories[]
 repositories {
@@ -21,7 +21,6 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile "joda-time:joda-time:2.2"
     testCompile "junit:junit:4.12"
 }
 // end::dependencies[]
