--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ targetCompatibility = 1.8
 
 dependencies {
     testCompile "junit:junit:4.12"
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 // end::dependencies[]
 
